Closed
Bug 1281193
Opened 9 years ago
Closed 9 years ago
Intermittent browser_devices_get_user_media.js | application crashed [@ mozilla::MediaStreamGraphImpl::AudioTrackPresent(bool &)]
Categories
(Core :: Audio/Video: MediaStreamGraph, defect, P1)
Core
Audio/Video: MediaStreamGraph
Tracking
()
RESOLVED
FIXED
mozilla50
People
(Reporter: intermittent-bug-filer, Assigned: padenot)
Details
(Keywords: intermittent-failure)
Attachments
(1 file)
|
58 bytes,
text/x-review-board-request
|
pehrsons
:
review+
gchang
:
approval-mozilla-aurora+
|
Details |
| Assignee | ||
Comment 1•9 years ago
|
||
Have we landed anything weird that would crash on `data.mData` ?
Flags: needinfo?(pehrson)
Updated•9 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•9 years ago
|
||
No, and we're never adding a track with a null MediaSegment.
Are we holding onto the SourceMediaStream mutex in AudioTrackPresent though? It could be racing against SourceMediaStream::AddTrackInternal().
Flags: needinfo?(pehrson) → needinfo?(padenot)
Updated•9 years ago
|
Rank: 15
Priority: -- → P1
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → padenot
Rank: 15
Flags: needinfo?(padenot)
Priority: P1 → --
| Assignee | ||
Updated•9 years ago
|
Rank: 15
Priority: -- → P1
| Assignee | ||
Comment 3•9 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/60270/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/60270/
Attachment #8764302 -
Flags: review?(pehrson)
Comment 4•9 years ago
|
||
Comment on attachment 8764302 [details]
Bug 1281193 - Lock when touching tracks in SourceAudioStreams.
https://reviewboard.mozilla.org/r/60270/#review57096
::: dom/media/MediaStreamGraph.h:1098
(Diff revision 1)
> void RegisterForAudioMixing();
>
> + /**
> + * Returns true if this SourceMediaStream contains at least one audio track
> + * that is in pending state.
> + * This is thread safe, and takes the stream monitor.
s/stream monitor/SourceMediaStream mutex/
Attachment #8764302 -
Flags: review?(pehrson) → review+
Pushed by paul@paul.cx:
https://hg.mozilla.org/integration/mozilla-inbound/rev/68ed15400143
Lock when touching tracks in SourceAudioStreams. r=pehrsons
Comment 6•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Comment 7•9 years ago
|
||
Paul -- Since this is a crash, does it make sense to ask for uplift to Fx 49 (Aurora)?
Flags: needinfo?(padenot)
| Assignee | ||
Comment 8•9 years ago
|
||
Comment on attachment 8764302 [details]
Bug 1281193 - Lock when touching tracks in SourceAudioStreams.
Approval Request Comment
[Feature/regressing bug #]: unclear, probably duplex initial landing in 48
[User impact if declined]: crash
[Describe test coverage new/current, TreeHerder]: there was an intermittent, it's now fixed
[Risks and why]: very small patch for a very obvious issue
[String/UUID change made/needed]: none
Flags: needinfo?(padenot)
Attachment #8764302 -
Flags: approval-mozilla-aurora?
Updated•9 years ago
|
status-firefox49:
--- → affected
Comment 9•9 years ago
|
||
Comment on attachment 8764302 [details]
Bug 1281193 - Lock when touching tracks in SourceAudioStreams.
This patch fixes an intermittent error. Take it in aurora.
Attachment #8764302 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 10•9 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•