Bug 1281193 - Lock when touching tracks in SourceAudioStreams. r=pehrsons

MozReview-Commit-ID: 2aSS8esq5jq